# maxinebot

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel  bazel-final.sh  bazel-nix.sh  bazel-nonnix.sh  nixpkgs.json  shell.nix
experimental/: BUILD.bazel  HelloWorld.scala  HelloWorldMain.scala  HelloWorldTest.scala  Slack.scala  package.scala
maxine/: README.md
maxine/src/main/scala/maxine/: BUILD.bazel  package.scala
maxine/src/main/scala/maxine/slack/models/events/: OuterEvent.scala  SlackEvents.scala  SocketEvent.scala
rules/: scala.bzl
virusdave/ops/: AnyOps.scala  BUILD.bazel  IterableOps.scala  OptionOps.scala
virusdave/zio/iterable/: BUILD.bazel  Shuffle.scala  ShuffleTest.scala
virusdave/zio/ops/: BUILD.bazel  IterableOps.scala  OptionOps.scala  ZioOps.scala
