load("//rules:scala.bzl", "scala_binary", "scala_library", "scala_repl", "scala_test")

scala_library(
    name = "experimental",
    srcs = ["package.scala"],
    deps = [
        "//virusdave/ops",
        "//virusdave/zio/ops",
    ],
)

scala_library(
    name = "helloworld-lib",
    srcs = glob(["HelloWorld.scala"]),
    deps = [
    ],
)

scala_binary(
    name = "helloworld",
    srcs = ["HelloWorldMain.scala"],
    deps = [
        ":helloworld-lib",
    ],
    main_class = "experimental.HelloWorldMain",
)

scala_binary(
    name = "slack",
    srcs = ["Slack.scala"],
    main_class = "experimental.Slack",
    deps = [
        ":experimental",
        "//virusdave/ops",
        "@thirdparty_jvm//:com_github_dapperware_zio_slack_api_realtime_2_12",
        "@thirdparty_jvm//:com_github_dapperware_zio_slack_api_web_2_12",
        "@thirdparty_jvm//:com_github_dapperware_zio_slack_core_2_12",
        "@thirdparty_jvm//:com_softwaremill_sttp_client_async_http_client_backend_2_12",
        "@thirdparty_jvm//:com_softwaremill_sttp_client_async_http_client_backend_zio_2_12",
        "@thirdparty_jvm//:com_softwaremill_sttp_client_circe_2_12",
        "@thirdparty_jvm//:com_softwaremill_sttp_client_core_2_12",
        "@thirdparty_jvm//:com_softwaremill_sttp_model_core_2_12",
        "@thirdparty_jvm//:dev_zio_izumi_reflect_2_12",
        "@thirdparty_jvm//:dev_zio_zio_2_12",
        "@thirdparty_jvm//:dev_zio_zio_config_2_12",
        "@thirdparty_jvm//:dev_zio_zio_config_typesafe_2_12",
        "@thirdparty_jvm//:dev_zio_zio_streams_2_12",
        "@thirdparty_jvm//:io_circe_circe_core_2_12",
        "@thirdparty_jvm//:org_asynchttpclient_async_http_client",
    ],
    data = [
        "//:config",
    ],
)

scala_test(
    name = "helloworld-test",
    srcs = ["HelloWorldTest.scala"],
    deps = [
        ":helloworld-lib",
        "@thirdparty_jvm//:org_scalactic_scalactic_2_12",
        "@thirdparty_jvm//:org_scalatest_scalatest_2_12",
        "@thirdparty_jvm//:org_scalatest_scalatest_compatible",
        "@thirdparty_jvm//:org_scalatest_scalatest_core_2_12",
        "@thirdparty_jvm//:org_scalatest_scalatest_flatspec_2_12",
        "@thirdparty_jvm//:org_scalatest_scalatest_shouldmatchers_2_12",
    ],
)