load("//rules:scala.bzl", "scala_library", "scala_test")

scala_library(
    name = "ops",
    srcs = glob(
        ["**/*.scala"],
        exclude = ["**/*Test.scala"],
    ),
    visibility = ["//visibility:public"],
    deps = [
    ],
)

scala_test(
    name = "test",
    srcs = glob(["**/*Test.scala"]),
    deps = [
      ":ops",
      "@thirdparty_jvm//:org_scalacheck_scalacheck_2_12",
    ],
)