load("//rules:scala.bzl", "scala_library", "scala_test", "scala_binary")

scala_library(
    name = "iterable",
    srcs = glob(
        ["**/*.scala"],
        exclude = ["**/*Test.scala"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "@thirdparty_jvm//:dev_zio_izumi_reflect_2_12",
        "@thirdparty_jvm//:dev_zio_zio_2_12",
    ],
)

scala_binary(
    name = "test",
    srcs = glob(["**/*Test.scala"]),
    deps = [
      ":iterable",
      "@thirdparty_jvm//:dev_zio_zio_2_12",
      "@thirdparty_jvm//:dev_zio_zio_test_2_12",
    ],
)