load("//rules:scala.bzl", "scala_binary", "scala_library")

scala_library(
    name = "maxine",
    srcs = ["package.scala"],
    visibility = ["//visibility:public"],
    deps = [
        "//virusdave/ops",
        "//virusdave/zio/ops",
    ],
)

scala_library(
    name = "slack",
    srcs = glob([
        "slack/**/*.scala",
    ]),
    scalacopts = [
        # Larger due to the large number of Event types
        "-Ypatmat-exhaust-depth",
        "100",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":maxine",
        "@thirdparty_jvm//:com_chuusai_shapeless_2_12",
        "@thirdparty_jvm//:com_github_dapperware_zio_slack_api_web_2_12",
        "@thirdparty_jvm//:io_circe_circe_core_2_12",
        "@thirdparty_jvm//:io_circe_circe_generic_2_12",
        "@thirdparty_jvm//:io_circe_circe_parser_2_12",
        "@thirdparty_jvm//:org_typelevel_cats_core_2_12",
    ],
)

